# dtfu

./: Cargo.toml  README.md  table.json
.cursor/commands/: make-pr.md
.github/workflows/: ci.yml
benches/: parquet_to_avro.rs
features/: cli.feature  convert.feature  count.feature  head.feature  schema.feature  tail.feature
src/: cli.rs  errors.rs  lib.rs  pipeline.rs  utils.rs
src/pipeline/: avro.rs  csv.rs  display.rs  json.rs  orc.rs  parquet.rs  record_batch_filter.rs  xlsx.rs  yaml.rs
tests/: cli.rs
