[package]
name = "dtfu"
version = "0.1.1"
edition = "2024"
description = "dtfu - a data multi-tool"
license = "MIT"
repository = "https://github.com/aisrael/dtfu"
readme = "README.md"
exclude = [
    ".github/*"
]

[dependencies]
anyhow = "1.0.100"
arrow = "57.2.0"
arrow-avro = "57.2.0"
clap = { version = "4.5.54", features = ["cargo", "derive"] }
chrono = "0.4"
datafusion = "52.1.0"
parquet = "57.2.0"
tokio = { version = "1.48", features = ["macros", "rt", "sync"] }
thiserror = "2.0.18"
csv = "1.4.0"

[dev-dependencies]
cucumber = "0.22.1"
futures = "0.3"
tempfile = "3"

[[test]]
name = "cli"
harness = false
